--- a/Templates/footer.html
+++ b/Templates/footer.html
@@ -6,7 +6,7 @@
     }
 </style>
 
-<footer class="d-flex justify-content-around fixed-bottom w-100 bg-white border-top py-2 shadow">
+<footer class="d-flex justify-content-around fixed-bottom w-100 bg-light border-top py-2 shadow">
 
     <a href="/" class="d-flex justify-content-center">
         <i class="fas fa-house"></i>
